--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -8,7 +8,7 @@
 <body>
 All in one 길찾기 서비스
 	<div>
-		<form action="DBFrontController/loginAuth.DBdo" method="post">
+		<form action="http://localhost:805/Tschedule/DBFrontController/loginAuth.DBdo" method="post">
 			<input type="text" placeholder="id" name="id"><br>
 			<input type="password" name="password">
 			<input type="submit" value="로그인">
